created main systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories($(PROJECT_SOURCE_DIR)/include/)
 
 add_executable(main src/main.cpp)
 
-add_library(sources SHARED src/game/Game.cpp src/render/Renderer.cpp src/render/Window.cpp)
+add_library(sources SHARED src/game/Game.cpp src/game/World.cpp
+    src/render/Renderer.cpp src/render/Window.cpp
+    src/entity/Entity.cpp src/entity/Animal.cpp)
 
 target_link_libraries(main sources ${SDL2_LIBRARIES})
