--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(CPPSDL)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
-include_directories($(PROJECT_SOURCE_DIR)/include/)
+include_directories(${PROJECT_SOURCE_DIR}/include/)
 
 add_compile_options(-fsanitize=address -g)
 add_link_options(-fsanitize=address -g)
@@ -15,6 +15,7 @@ add_executable(main src/main.cpp)
 add_library(sources SHARED src/game/Game.cpp src/game/World.cpp
     src/render/Renderer.cpp src/render/Window.cpp
     src/entity/Entity.cpp src/entity/Animal.cpp
-    src/entity/Sheep.cpp src/entity/Wolf.cpp)
+    src/entity/Sheep.cpp src/entity/Wolf.cpp
+    src/audio/AudioHandler.cpp)
 
 target_link_libraries(main sources ${SDL2_LIBRARIES})
