--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ add_link_options(-fsanitize=address -g)
 add_executable(main src/main.cpp)
 
 add_library(sources SHARED src/game/Game.cpp src/game/World.cpp
+    src/game/InputHandler.cpp
     src/render/Renderer.cpp src/render/Window.cpp
     src/entity/Entity.cpp src/entity/Animal.cpp
-    src/entity/Sheep.cpp src/entity/Wolf.cpp)
+    src/entity/Sheep.cpp src/entity/Wolf.cpp
+    src/entity/Shepard.cpp)
 
 target_link_libraries(main sources ${SDL2_LIBRARIES})
