--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ add_library(sources SHARED src/game/Game.cpp src/game/World.cpp
     src/render/Renderer.cpp src/render/Window.cpp
     src/entity/Entity.cpp src/entity/Animal.cpp
     src/entity/Sheep.cpp src/entity/Wolf.cpp
-    src/entity/Sheperd.cpp src/entity/SheperdDog.cpp)
+    src/entity/Shepherd.cpp src/entity/ShepherdDog.cpp)
 
 target_link_libraries(main sources ${SDL2_LIBRARIES})
